All bugs squashed and typeIt implementation

--- a/Assets/Styles/Sass/2-sections/header.scss
+++ b/Assets/Styles/Sass/2-sections/header.scss
@@ -34,7 +34,8 @@
       color:white;
     }
     .scroll-to-bottom {
-      height: 150px;
+      height: 100px;
+      width: 150px;
       position: absolute;
       bottom: 30px;
       margin-left: auto;
