--- a/Assets/Styles/Sass/2-sections/layout/about.scss
+++ b/Assets/Styles/Sass/2-sections/layout/about.scss
@@ -1,14 +1,21 @@
 .about {
-  background-image: url('../../Images/shards_pattern.jpg');
   .row {
+    .col-md-12 {
+      padding: 0;
+    }
     .about-title {
+      color: $kappa-violet;
+      margin-top: 100px;
       text-align: center;
     }
     .about-kicker {
       margin-top: 45px;
       text-align: center;
+      margin-bottom: 100px;
     }
     .people-container {
+      padding: 50px 0;
+      background-image: url('../../Images/shards_pattern.jpg');
       display: flex;
       justify-content: center;
       align-items: center;
