--- a/Assets/Styles/Sass/2-sections/projects.scss
+++ b/Assets/Styles/Sass/2-sections/projects.scss
@@ -2,7 +2,9 @@
   position: relative;
   overflow: hidden;
   #row-1 {
-
+    .project-head {
+      color: $kappa-pink;
+    }
   }
   #row-2 {
     .project-container {
